syntax = "proto3";

option java_package = "io.morethan.tweaky.examples.dm.shared.proto";
option java_outer_classname = "DmSharedProto";
option java_multiple_files = true;

message PutRequest {
    string key = 1;
    string value = 2;
}
message PutReply {}

message GetRequest {
    string key = 1;
}
message GetReply {
    string value = 1;
}
